src/includes/css/style.css
/* kevin-yellow : fee201 */
/* Hightlight-me-blue : 0173fe */
/* come on over yellow : e5d02f  */

/* last updated on 8/19 @ 07:51   */

body {
    background: #e9e9e9;
    font-size: 1.5em;
    font-family: sans-serif;
    line-height: 1.5;
    color: #eee;
    margin:0;
    background-image: url("https://digitalkdogg.github.io/src/includes/img/texture-bg.png");
}

.hidden {
	display:none;
}

.show {
	display:block;
}

button {
    background: #0173fe;
    color: white;
    border-radius: 5px;
    padding: 10px;
    border: none;
    font-size: 16px;
}

button:hover {
	cursor: pointer;
	opacity:.7;
}

div#header, div#the-guts, div#footer {
	padding: 10px 5%;
	clear: both;
}
div#header {
    height: 200px;
    /*background: #0173fe; */
    background: rgba(1, 115, 254, 0.7);
    padding-top:0;
    padding-bottom:0;
}

div#header.scrolled {
    position: fixed;
    width: 100%;
    height: 50px;
    z-index: 10;
    border-bottom: 1px solid black;
    background: rgba(1, 115, 254, 1);
}

div#header.scrolled div#title-container {
  	height:100%;
}

div#header.scrolled div#title {
	border:none;
	margin-top: 5px;
}

div#header.scrolled div.phone, div#header.scrolled div.email, div#header.scrolled div#headline {
	visibility: hidden;
}

div#header.scrolled div#logo-container {
	vertical-align: top;
	margin-top: 10px;
    position: unset;
}

@media only screen and (max-width: 800px) {
	div#header.scrolled div#mobile-menu {
    	margin: 30px 5px 0;
	}

    div#header div#title {
        text-align:center;
    }

    div#header {
        height:225px;
    }
}


div#title-container {
    background: #fee201;
    width: 40%;
    margin: 0 15%;
    height:65%;
    color: #333;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    overflow:hidden;
}

@media only screen and (max-width: 1500px) {
    div#title-container {
        width:50%;
    }

}

div#title {
    border-bottom: 1px solid #333;
    font-size:1.2em;
    font-weight: bolder;
}

#header.scrolled #title-container {
	border-radius: 0;
}

#title-container .phone, #title-container .email, #title-container .headline {
    font-size: 16px;
}

div#text-container, div#logo-container {
    display: inline-block;
}

div#logo-container {
    width: 30%;
    vertical-align:super;
    font-size: 25px;
    color:rgba(0,0,0,.7);
    font-weight: 1000;
	text-align:center;
    position: relative;
    top:-25%;
}

div#icon-container {
    float: right;
    position: absolute;
    top: 0;
    width: 100%;
    height: 60px;
    text-align:right;
    left:-15%;
}

div#icon-container div {
    display: inline;
    margin: 0 10px;
}

div#header.scrolled div#icon-container {
    position: fixed;
    top: -5px;
}

div#icon-container div.bottom {
    top: 30px;
    position: relative;
}

div#header.scrolled div#icon-container div.bottom {
    top:10px;
}

@media only screen and (max-width: 1500px) and (min-width: 1250px) {
    div#icon-container {
        margin: 0;
        width:100%;
        text-align:right;
        position: absolute;
        left:0;
    }
}


@media only screen and (max-width: 1249px) and (min-width: 1024px) {
    div#icon-container {
        margin:0 -75px;
        top:0;
        width:100%;
        text-align:right;
        position: absolute;
        left:0;
    }

    div#icon-container div {
        margin:5px;
    }

    div#header.scrolled div#icon-container {
        display:none;
    }
}

@media only screen and (max-width: 1024px) {
    div#icon-container {
        top:115px;
        text-align:center;
        margin:0;
    }

    div#header.scrolled div#icon-container {
        display: none;
    }

}

@media only screen and (max-width: 800px) {
    div#icon-container {
       text-align: center;
       width:100%;
       margin:0;
       top:125px;
    }

    div#icon-container div {
        margin: 0 5px;
    }

    div#header.scrolled div#icon-container {
        display: none;
    }
} 

@media only screen and (max-width:350px) {
    div#icon-container div {
        margin: 0 2px;
    }
}

@media only screen and (max-width:300px) {
    div#icon-container {
        display:none;
    }
}


div#text-container {
	width:69%;
	height:100%;
	border-left: 1px solid black;
	text-indent:10px;
}

div#text-container a {
    color: black;
}

div#text-container div.phone a {
    text-decoration: none;
}

div#text-container div.email a:hover {
    color: #555;
}

@media only screen and (max-width: 1025px) {
  	div#title-container {
    	width:65%;
    	margin:0 20%;
	}

    div#header.scrolled div#title-container {
        width:60%;
        margin: 0 20%;
    }
}

@media only screen and (max-width: 800px) {
    div#text-container div.phone a {
        text-decoration: underline;
    }


  	div#header.init div#title-container {
    	width:90%;
    	margin:0;
        float:right;
	}

	div#header.scrolled div#title-container {
		width: 65%;
		float: left;
		position: relative;
		left:15%;
	}

    div#header.scrolled div#title, div#header.scrolled div#text-container {
        text-indent: unset;
        margin: 5px -10px;
        font-size: .9em !important;
    }

	div#logo-container {
		display:none;
	}

	div#header.scrolled #logo-container {
		display:none;
	}

	div#text-container {
	    width: 100%;
		font-size: 18px;
	}
}

@media only screen and (max-width: 380px) {
    div#logo-container {
        font-size:1.4em;
    }

	#title-container div.phone, #title-container div.email {
		font-size:14px;
	}

    div#header.scrolled div#text-contianer #title {
        font-size:14px !important;
    }
}

#the-guts h2.title {
	border-bottom:1px solid white;
}

#the-guts .item {
	background:white;
	color:black;
	min-height:100px;
	padding: 20px 10px;
	font-size:16px;
}

#the-guts .project {
    height: 450px;
    width: 30%;
    background: #fee201;
    display:inline-grid;
    margin:1%;
    opacity: .8;
    border: 1px solid #0173fe;
    border-radius: 5px;
}
/* ... */

